--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -15213,3 +15213,14 @@ div.v-layout.v-horizontal.v-widget {
 	width: 19px;
 	overflow: hidden;
 }
+
+.hintergrundbild {
+	background-image: url("Berge2.jpg");
+	background-position: left top;
+	background-size: cover;
+}
+
+.schrift-willkommen{
+	font-family: Lato, Helvetica, Roboto, sans-serif;
+	font-size: larger;
+}
